# BuildYourOwnNeuralNetwork

./: .gitignore  ADVANCED_GUIDE.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
scripts/: advanced_demo.py  rnn_char_demo.py
src/neuralforge/core/: tensor.py
src/neuralforge/nn/: __init__.py  activations.py  containers.py  linear.py  loss.py  module.py  rnn.py
src/neuralforge/optim/: __init__.py  sgd.py
tests/: test_nn.py  test_tensor.py
