[project]
name = "neuralforge"
version = "0.1.0"
description = "Build your own neural network from scratch with NumPy and PyTorch"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "MIT"}
keywords = ["neural-network", "deep-learning", "machine-learning", "pytorch", "numpy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.24",
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "torchaudio>=2.1.0",
    "scikit-learn>=1.3",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "black>=23.7",
    "ruff>=0.1",
    "mypy>=1.5",
    "pre-commit>=3.3",
]
jupyter = [
    "jupyter>=1.0",
    "notebook>=7.0",
    "ipython>=8.0",
]
api = [
    "fastapi>=0.101",
    "uvicorn>=0.23",
]
monitoring = [
    "tensorboard>=2.14",
    "wandb>=0.15",
]

[project.urls]
Homepage = "https://github.com/yourusername/neuralforge"
Documentation = "https://github.com/yourusername/neuralforge/tree/main/docs"
Repository = "https://github.com/yourusername/neuralforge.git"
Issues = "https://github.com/yourusername/neuralforge/issues"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "W", "I", "N", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
